add and style navbar

--- a/index.html
+++ b/index.html
@@ -10,5 +10,25 @@
     />
     <title>Loruki | Cloud Hosting For Everyone</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Navigation -->
+    <header class="navbar">
+      <div class="container container-flex">
+        <h1 class="logo">Loruki</h1>
+        <nav class="nav">
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="features.html" class="nav-link">Features</a>
+            </li>
+            <li class="nav-item">
+              <a href="docs.html" class="nav-link">Docs</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
