--- a/index.html
+++ b/index.html
@@ -30,5 +30,39 @@
         </nav>
       </div>
     </header>
+    <!-- Showcase -->
+    <section class="showcase">
+      <div class="container container-grid">
+        <div class="showcase-text">
+          <h1 class="showcase-title">Easier Deployment</h1>
+          <p class="showcase-info">
+            Deploy web apps of all kinds, from larger scale enterprise APIS to
+            static websites for individuals. Fill out the form to try a demo of
+            our platform
+          </p>
+          <a href="features.html" class="btn btn-outline">Read More</a>
+        </div>
+        <div class="showcase-form card">
+          <h2>Request a Demo</h2>
+          <form>
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Name" required />
+            </div>
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Company Name"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="Send" class="btn btn-primary" />
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
