--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -61,6 +62,33 @@
             </div>
             <input type="submit" value="Send" class="btn btn-primary" />
           </form>
+        </div>
+      </div>
+    </section>
+    <!-- Stats -->
+    <section class="stats">
+      <div class="container">
+        <h3 class="stats-heading text-center my-1">
+          Welcome to the best platform for building web applications of all
+          types with modern architecture and scaling.
+        </h3>
+        <!-- grid container needed -->
+        <div class="container-grid grid-3 text-center my-4">
+          <div>
+            <i class="fas fa-server fa-3x"></i>
+            <h3 class="stat-number">10,349,405</h3>
+            <p class="text-secondary stat-name">Deployments</p>
+          </div>
+          <div>
+            <i class="fas fa-upload fa-3x"></i>
+            <h3 class="stat-number">987 TB</h3>
+            <p class="text-secondary stat-name">Published</p>
+          </div>
+          <div>
+            <i class="fas fa-project-diagram fa-3x"></i>
+            <h3 class="stat-number">2,343,265</h3>
+            <p class="text-secondary stat-name">Projects</p>
+          </div>
         </div>
       </div>
     </section>
