--- a/index.html
+++ b/index.html
@@ -92,5 +92,99 @@
         </div>
       </div>
     </section>
+
+    <!-- CLI -->
+    <section class="cli">
+      <div class="container container-grid">
+        <img src="./images/cli.png" alt=" CLI installations demo" />
+        <div class="card">
+          <h3>Easy to use, cross platform CLI</h3>
+        </div>
+        <div class="card">
+          <h3>Deploy in seconds</h3>
+        </div>
+      </div>
+    </section>
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+      <div class="container container-grid">
+        <div class="text-center">
+          <h2 class="lg">Extreme Cloud Hosting</h2>
+          <p class="lead my-1">
+            Cloud hosting like you have never seen Fast, efficient and scalable
+          </p>
+          <a href="features.html" class="btn btn-dark">Read More</a>
+        </div>
+        <img src="./images/cloud.png" alt="Cloud Networking Logo" />
+      </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="languages">
+      <h2 class="md text-center my-2">Supported Languages</h2>
+      <div class="container container-flex">
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="images/logos/node.png" alt="Node logo" />
+        </div>
+        <div class="card">
+          <h4>Python</h4>
+          <img src="images/logos/python.png" alt="python logo" />
+        </div>
+        <div class="card">
+          <h4>C#</h4>
+          <img src="images/logos/csharp.png" alt="C Sharp logo" />
+        </div>
+        <div class="card">
+          <h4>Ruby</h4>
+          <img src="images/logos/ruby.png" alt="Ruby logo" />
+        </div>
+        <div class="card">
+          <h4>PHP</h4>
+          <img src="images/logos/php.png" alt="PHP logo" />
+        </div>
+        <div class="card">
+          <h4>Scala</h4>
+          <img src="images/logos/scala.png" alt="Scala logo" />
+        </div>
+        <div class="card">
+          <h4>Clojure</h4>
+          <img src="images/logos/clojure.png" alt="Clojure logo" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+      <div class="container container-grid grid-3">
+        <div>
+          <h1>Loruki</h1>
+          <p>Copyright &copy; 2020</p>
+        </div>
+        <nav>
+          <ul class="footer-nav-menu">
+            <li><a class="footer-nav-link" href="index.html">Home</a></li>
+            <li>
+              <a class="footer-nav-link" href="features.html">Features</a>
+            </li>
+            <li><a class="footer-nav-link" href="docs.html">Docs</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#" class="footer-nav-link"
+            ><i class="fab fa-github fa-2x"></i
+          ></a>
+          <a href="#" class="footer-nav-link"
+            ><i class="fab fa-facebook fa-2x"></i
+          ></a>
+          <a href="#" class="footer-nav-link"
+            ><i class="fab fa-instagram fa-2x"></i
+          ></a>
+          <a href="#" class="footer-nav-link"
+            ><i class="fab fa-twitter fa-2x"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
