add docs page and styling

--- a/features.html
+++ b/features.html
@@ -58,7 +58,7 @@
             nisi. Placeat, veritatis?
           </p>
         </div>
-        <img src="images/server2.png" alt="server lgo" />
+        <img src="images/server2.png" alt="server logo" />
       </div>
     </section>
 
